--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==0.11.1
 Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
